Add project to issuehunt

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/WarenGonzaga/fork-corner/issues"
   },
-  "homepage": "https://github.com/WarenGonzaga/fork-corner#readme"
+  "homepage": "https://github.com/WarenGonzaga/fork-corner#readme",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.1.0"
+  }
 }
