--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fork-corner",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-rc.1",
   "description": "A modern and global open source fork corner label for your project's landing page.",
   "main": "index.js",
   "scripts": {
