--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fork-corner",
-  "version": "1.0.0-rc.8.1",
+  "version": "1.0.0",
   "description": "A modern and global open source fork corner label for your project's landing page.",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
     "gitlab",
     "label",
     "css",
-    "javascript"
+    "javascript",
+    "modern",
+    "ribbon"
   ],
   "author": "Waren Gonzaga",
   "license": "MIT",
@@ -29,6 +31,7 @@
   "github": "https://github.com/WarenGonzaga/fork-corner",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-eslint": "^6.0.0",
     "gulp-header": "^2.0.9",
     "gulp-rename": "^2.0.0",
@@ -38,9 +41,7 @@
     "node-sass": "^5.0.0",
     "readable-stream": "^3.6.0"
   },
-  "dependencies": {
-    "gulp-clean": "^0.4.0"
-  },
+  "dependencies": {},
   "files": [
     "dist/*"
   ]
