👌 IMPROVE: Update funding links

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # Support Fork Corner by using the funding links below
 # Developed and Maintained by Waren Gonzaga
 
+issuehunt: WarenGonzaga/fork-corner
 custom: ['https://bmc.xyz/warengonzaga','https://paypal.me/warengonzagaofficial']
